# MNIST-Pure-C-Implementation-with-Autograd

./: .gitignore  CMakeLists.txt  README.md  mnist_download.py  requirements.txt
src/: Matrix.cpp  Matrix.hpp  ModelContext.cpp  ModelContext.hpp  ModelTrainingDesc.hpp  ModelVariables.hpp  PRNG.cpp  PRNG.hpp  Types.hpp  mnist.cpp
